rest page improvements
