# openapi/cerebro.json
@@ -1549,6 +1549,33 @@
         ],
         "type": "object"
       },
+      "RestRequestResponse": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "https://example.com/schemas/RestRequestResponse.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "data": {
+            "description": "Raw Elasticsearch response payload."
+          },
+          "status": {
+            "description": "HTTP status returned by Elasticsearch.",
+            "format": "int64",
+            "type": "integer"
+          }
+        },
+        "required": [
+          "status",
+          "data"
+        ],
+        "type": "object"
+      },
       "SnapshotsCreateInBody": {
         "additionalProperties": false,
         "properties": {
@@ -3584,7 +3611,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RawResponse"
+                  "$ref": "#/components/schemas/RestRequestResponse"
                 }
               }
             },
